--- a/index.html
+++ b/index.html
@@ -2,8 +2,33 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>GPA 計算機</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>GPA 計算機｜4.0 與 4.3 制換算｜線上免費工具</title>
+
+  <!-- SEO 基本描述 -->
+  <meta name="description" content="免費線上 GPA 計算機，支援 4.0 與 4.3 制，快速換算成績等級與加權平均，適合學生申請國外大學或研究所使用。">
+
+  <!-- 關鍵字（Google 雖不重視，但部分搜尋引擎仍有用） -->
+  <meta name="keywords" content="GPA計算機, GPA換算, GPA計算, 4.0制, 4.3制, 成績平均, GPA online calculator">
+
+  <!-- Open Graph (Facebook / LINE / LinkedIn 分享用) -->
+  <meta property="og:title" content="GPA 計算機｜支援 4.0 / 4.3 制" />
+  <meta property="og:description" content="線上免費 GPA 計算機，快速換算 A+、A、B+ 等級分數，支援 4.0 與 4.3 制。" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://你的網站網址/gpa-calculator" />
+  <meta property="og:image" content="https://你的網站網址/preview.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="GPA 計算機｜4.0 / 4.3 制" />
+  <meta name="twitter:description" content="免費 GPA 計算機，支援 4.0 與 4.3 制，快速換算平均分數。" />
+  <meta name="twitter:image" content="https://你的網站網址/preview.png" />
+
+  <!-- Canonical (避免重複內容問題) -->
+  <link rel="canonical" href="https://你的網站網址/gpa-calculator" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
   <style>
     :root{
       --bg:#f6f8fb;
