--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
   <meta property="og:title" content="GPA 計算機｜支援 4.0 / 4.3 制" />
   <meta property="og:description" content="線上免費 GPA 計算機，快速換算 A+、A、B+ 等級分數，支援 4.0 與 4.3 制。" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://你的網站網址/gpa-calculator" />
-  <meta property="og:image" content="https://你的網站網址/preview.png" />
+  <meta property="og:url" content="https://gpa-calculator/gpa-calculator" />
+  <meta property="og:image" content="https://gpa-calculator/preview.png" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="GPA 計算機｜4.0 / 4.3 制" />
   <meta name="twitter:description" content="免費 GPA 計算機，支援 4.0 與 4.3 制，快速換算平均分數。" />
-  <meta name="twitter:image" content="https://你的網站網址/preview.png" />
+  <meta name="twitter:image" content="https://gpa-calculator/preview.png" />
 
   <!-- Canonical (避免重複內容問題) -->
-  <link rel="canonical" href="https://你的網站網址/gpa-calculator" />
+  <link rel="canonical" href="https://gpa-calculator/gpa-calculator" />
 
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico" type="image/x-icon" />
